--- a/getcomedyworld.html
+++ b/getcomedyworld.html
@@ -17,13 +17,13 @@
 </header>
 
 <section class="banner">
-    <h1 id=click-a-link-below-to-download-a-wrapper>Click a link below to download a Wrapper!</h1>
+    <h1 id=click-a-link-below-to-download-a-legacy-video-maker-assets>Click a link below to download a Legacy Video Maker Assets!</h1>
     <button class="link-text"><a href="https://wrappershop.ga">TAKE ME HOME</button></a>
 </section>
 
 <main>
 
-<h2 id="official-mods">Some LVMs</h2>
+<h2 id="official-mods">Wrapper Online Store Make a Assets Easily</h2>
 <p>some good lvms</p>
 
 <style type="text/css">
