--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 	<a href="https://wrappershop.ga"><h1 style="margin:0"><img id="logo" src="pages/img/logo.png" alt="Wrapper: Shop"/></h1></a>
 	<nav id="headbuttons">
-		<a href="https://www.wrappershop.ga/getcomedyworld" class="button_small">GET WRAPPER</a>
+		<a href="https://www.wrappershop.ga/getcomedyworld" class="button_small">MORE WRAPPER ONLINE STORE</a>
 	</nav>
 </header>
 
@@ -26,7 +26,7 @@
 <main>
 
 <h2 id="official-mods">Featured</h2>
-<p>Not looking for anything specifically? Then check out these awesome mods!</p>
+<p>My Legacy Video Maker Assets!</p>
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;width:65px;}
