--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
 <header>
-	<a href="https://wrappershop.ga"><h1 style="margin:0"><img id="logo" src="pages/img/logo.png" alt="Wrapper: Shop"/></h1></a>
+	<a href="https://wrapperonlinestore.ga"><h1 style="margin:0"><img id="logo" src="pages/img/logo.png" alt="Wrapper: Shop"/></h1></a>
 	<nav id="headbuttons">
-		<a href="https://www.wrappershop.ga/getcomedyworld" class="button_small">MORE WRAPPER ONLINE STORE</a>
+		<a href="https://www.wrapperonlinestore.ga/getcomedyworld" class="button_small">MORE WRAPPER ONLINE STORE</a>
 	</nav>
 </header>
 
