--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <header>
 	<a href="https://wrapperonlinestore.ga"><h1 style="margin:0"><img id="logo" src="pages/img/logo.png" alt="Wrapper: Shop"/></h1></a>
 	<nav id="headbuttons">
-		<a href="https://www.wrapperonlinestore.ga/getcomedyworld" class="button_small">MORE WRAPPER ONLINE STORE</a>
+		<a href="https://wrapper-onlinega.github.io/getcomedyworld" class="button_small">MORE WRAPPER ONLINE STORE</a>
 	</nav>
 </header>
 
 <section class="banner">
     <h1 id=welcome-to-the-number1-site-for-anything-and-everything-wrapper>Welcome to the #1 site for anything and everything Wrapper.</h1>
-    <button class="link-text"><a href="https://www.wrappershop.ga/categories/list">SHOP NOW</button></a>
-    <button class="link-text"><a href="https://www.wrappershop.ga/faq">FAQ</button></a><br>
+    <button class="link-text"><a href=https://wrapper-onlinega.github.io/categories/list">SHOP NOW</button></a>
+    <button class="link-text"><a href="https://wrapper-onlinega.github.io/faq">FAQ</button></a><br>
 </section>
 
 <main>
