--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="favicon.ico" type="image/png">
-	<title>404 Error</title>
+	<link rel= icon" href="favicon.ico" type="image/png">
+	<title>Maintenace Error</title>
 	<meta name="description" content="Anything and everything Wrapper.">
 	<link rel="stylesheet" type="text/css" href="pages/css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="pages/css/global.css">
@@ -16,8 +16,8 @@
 
 <main>
 
-<h2>404 Not Found</h2>
+<h2>Maintenace Error</h2>
 
-<p>Are you looking for something?<br>Think you're some kind of detective?<br>Well think again!<br>Get out and use the shop properly!</p>
+<p>Get me fucking out of Wrapper Online Store!!<br>fucking me!</p>
 
 </body></html>
